--- a/output.css
+++ b/output.css
@@ -448,6 +448,11 @@ video {
   display: none;
 }
 
+html,
+  body {
+  overflow-x: hidden;
+}
+
 *, ::before, ::after{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -594,6 +599,10 @@ video {
   margin-right: auto;
 }
 
+.mb-4{
+  margin-bottom: 1rem;
+}
+
 .ml-4{
   margin-left: 1rem;
 }
@@ -602,8 +611,16 @@ video {
   margin-left: 2rem;
 }
 
+.mt-14{
+  margin-top: 3.5rem;
+}
+
 .mt-16{
   margin-top: 4rem;
+}
+
+.mt-20{
+  margin-top: 5rem;
 }
 
 .mt-4{
@@ -622,8 +639,16 @@ video {
   display: flex;
 }
 
+.grid{
+  display: grid;
+}
+
 .hidden{
   display: none;
+}
+
+.h-12{
+  height: 3rem;
 }
 
 .h-2{
@@ -634,20 +659,20 @@ video {
   height: 1000px;
 }
 
-.h-12{
-  height: 3rem;
-}
-
 .max-h-12{
   max-height: 3rem;
+}
+
+.min-h-24{
+  min-height: 6rem;
 }
 
 .min-h-screen{
   min-height: 100vh;
 }
 
-.min-h-24{
-  min-height: 6rem;
+.w-12{
+  width: 3rem;
 }
 
 .w-2{
@@ -663,16 +688,12 @@ video {
   width: fit-content;
 }
 
-.w-12{
-  width: 3rem;
-}
-
-.w-16{
-  width: 4rem;
-}
-
 .w-screen{
   width: 100vw;
+}
+
+.w-full{
+  width: 100%;
 }
 
 .min-w-24{
@@ -687,8 +708,8 @@ video {
   max-width: 56rem;
 }
 
-.translate-y-2{
-  --tw-translate-y: 0.5rem;
+.-translate-x-36{
+  --tw-translate-x: -9rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -697,8 +718,8 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-x-36{
-  --tw-translate-x: -9rem;
+.translate-y-2{
+  --tw-translate-y: 0.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -717,6 +738,10 @@ video {
 
 .list-none{
   list-style-type: none;
+}
+
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -759,10 +784,6 @@ video {
   gap: 1.5rem;
 }
 
-.gap-16{
-  gap: 4rem;
-}
-
 .gap-8{
   gap: 2rem;
 }
@@ -779,13 +800,31 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+
 .border{
   border-width: 1px;
+}
+
+.border-b{
+  border-bottom-width: 1px;
+}
+
+.border-gray-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .border-gray-400{
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
+
+.border-gray-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 
 .border-yellow-400{
@@ -796,11 +835,6 @@ video {
 .border-yellow-600{
   --tw-border-opacity: 1;
   border-color: rgb(202 138 4 / var(--tw-border-opacity));
-}
-
-.border-gray-500{
-  --tw-border-opacity: 1;
-  border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 
 .bg-\[\#1e40af\]{
@@ -859,9 +893,18 @@ video {
   padding: 0.75rem;
 }
 
+.p-4{
+  padding: 1rem;
+}
+
 .px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-6{
@@ -882,6 +925,21 @@ video {
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .pb-16{
@@ -905,6 +963,11 @@ video {
   line-height: 2.5rem;
 }
 
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -913,6 +976,10 @@ video {
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.font-light{
+  font-weight: 300;
 }
 
 .font-medium{
@@ -955,6 +1022,11 @@ video {
 .text-yellow-600{
   --tw-text-opacity: 1;
   color: rgb(202 138 4 / var(--tw-text-opacity));
+}
+
+.text-yellow-700{
+  --tw-text-opacity: 1;
+  color: rgb(161 98 7 / var(--tw-text-opacity));
 }
 
 .text-yellow-800{
@@ -1025,8 +1097,20 @@ video {
     margin-top: 1rem;
   }
 
+  .sm\:mt-0{
+    margin-top: 0px;
+  }
+
   .sm\:flex{
     display: flex;
+  }
+
+  .sm\:w-auto{
+    width: auto;
+  }
+
+  .sm\:w-1\/2{
+    width: 50%;
   }
 
   .sm\:max-w-2xl{
@@ -1051,6 +1135,11 @@ video {
     padding-right: 1.5rem;
   }
 
+  .sm\:px-16{
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
   .sm\:pt-12{
     padding-top: 3rem;
   }
@@ -1068,13 +1157,13 @@ video {
     font-size: 3.75rem;
     line-height: 1;
   }
+
+  .sm\:font-bold{
+    font-weight: 700;
+  }
 }
 
 @media (min-width: 768px){
-  .md\:flex{
-    display: flex;
-  }
-
   .md\:hidden{
     display: none;
   }
@@ -1091,12 +1180,12 @@ video {
     width: 4rem;
   }
 
-  .md\:w-screen{
-    width: 100vw;
-  }
-
   .md\:min-w-32{
     min-width: 8rem;
+  }
+
+  .md\:flex-row{
+    flex-direction: row;
   }
 }
 
@@ -1107,5 +1196,13 @@ video {
 
   .lg\:hidden{
     display: none;
+  }
+
+  .lg\:w-1\/2{
+    width: 50%;
+  }
+
+  .lg\:flex-row{
+    flex-direction: row;
   }
 }
