--- a/output.css
+++ b/output.css
@@ -585,6 +585,10 @@ html,
   z-index: 20;
 }
 
+.order-first{
+  order: -9999;
+}
+
 .row-start-1{
   grid-row-start: 1;
 }
@@ -689,6 +693,30 @@ html,
   margin-bottom: 2.5rem;
 }
 
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+
+.mb-12{
+  margin-bottom: 3rem;
+}
+
+.ml-12{
+  margin-left: 3rem;
+}
+
+.ml-auto{
+  margin-left: auto;
+}
+
+.mb-14{
+  margin-bottom: 3.5rem;
+}
+
+.-mr-3{
+  margin-right: -0.75rem;
+}
+
 .flex{
   display: flex;
 }
@@ -730,8 +758,52 @@ html,
   height: 50px;
 }
 
+.h-4{
+  height: 1rem;
+}
+
+.h-\[650px\]{
+  height: 650px;
+}
+
+.h-1{
+  height: 0.25rem;
+}
+
+.h-16{
+  height: 4rem;
+}
+
 .max-h-12{
   max-height: 3rem;
+}
+
+.max-h-\[\]{
+  max-height: ;
+}
+
+.max-h-\[650px\]{
+  max-height: 650px;
+}
+
+.max-h-\[65\]{
+  max-height: 65;
+}
+
+.max-h-\[700px\]{
+  max-height: 700px;
+}
+
+.max-h-7{
+  max-height: 1.75rem;
+}
+
+.max-h-\[950px\]{
+  max-height: 950px;
+}
+
+.max-h-\[850px\]{
+  max-height: 850px;
 }
 
 .min-h-24{
@@ -740,6 +812,14 @@ html,
 
 .min-h-screen{
   min-height: 100vh;
+}
+
+.min-h-12{
+  min-height: 3rem;
+}
+
+.min-h-16{
+  min-height: 4rem;
 }
 
 .w-12{
@@ -767,8 +847,20 @@ html,
   width: 100vw;
 }
 
+.w-16{
+  width: 4rem;
+}
+
 .min-w-24{
   min-width: 6rem;
+}
+
+.min-w-12{
+  min-width: 3rem;
+}
+
+.min-w-16{
+  min-width: 4rem;
 }
 
 .max-w-12{
@@ -777,6 +869,10 @@ html,
 
 .max-w-4xl{
   max-width: 56rem;
+}
+
+.max-w-7xl{
+  max-width: 80rem;
 }
 
 .-translate-x-36{
@@ -853,8 +949,20 @@ html,
   flex-direction: column;
 }
 
+.flex-wrap{
+  flex-wrap: wrap;
+}
+
 .flex-nowrap{
   flex-wrap: nowrap;
+}
+
+.items-start{
+  align-items: flex-start;
+}
+
+.items-end{
+  align-items: flex-end;
 }
 
 .items-center{
@@ -897,6 +1005,14 @@ html,
   gap: 2rem;
 }
 
+.gap-1{
+  gap: 0.25rem;
+}
+
+.gap-12{
+  gap: 3rem;
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
@@ -927,6 +1043,10 @@ html,
 
 .rounded-xl{
   border-radius: 0.75rem;
+}
+
+.rounded{
+  border-radius: 0.25rem;
 }
 
 .border{
@@ -972,6 +1092,16 @@ html,
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
+.border-yellow-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(253 224 71 / var(--tw-border-opacity));
+}
+
+.border-red-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
+}
+
 .bg-\[\#1e40af\]{
   --tw-bg-opacity: 1;
   background-color: rgb(30 64 175 / var(--tw-bg-opacity));
@@ -1005,6 +1135,11 @@ html,
 .bg-yellow-50{
   --tw-bg-opacity: 1;
   background-color: rgb(254 252 232 / var(--tw-bg-opacity));
+}
+
+.bg-blue-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b{
@@ -1137,6 +1272,14 @@ html,
   padding-top: 2rem;
 }
 
+.pl-12{
+  padding-left: 3rem;
+}
+
+.pl-6{
+  padding-left: 1.5rem;
+}
+
 .text-center{
   text-align: center;
 }
@@ -1174,6 +1317,16 @@ html,
   line-height: 1.75rem;
 }
 
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -1204,6 +1357,22 @@ html,
 
 .leading-none{
   line-height: 1;
+}
+
+.leading-3{
+  line-height: .75rem;
+}
+
+.leading-8{
+  line-height: 2rem;
+}
+
+.leading-5{
+  line-height: 1.25rem;
+}
+
+.leading-relaxed{
+  line-height: 1.625;
 }
 
 .text-black{
@@ -1249,6 +1418,16 @@ html,
 .text-gray-700{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+.text-gray-50{
+  --tw-text-opacity: 1;
+  color: rgb(249 250 251 / var(--tw-text-opacity));
+}
+
+.text-indigo-800{
+  --tw-text-opacity: 1;
+  color: rgb(55 48 163 / var(--tw-text-opacity));
 }
 
 .shadow-md{
@@ -1349,6 +1528,10 @@ html,
     display: grid;
   }
 
+  .sm\:hidden{
+    display: none;
+  }
+
   .sm\:w-auto{
     width: auto;
   }
@@ -1369,6 +1552,10 @@ html,
     align-items: center;
   }
 
+  .sm\:gap-4{
+    gap: 1rem;
+  }
+
   .sm\:px-16{
     padding-left: 4rem;
     padding-right: 4rem;
@@ -1382,6 +1569,11 @@ html,
   .sm\:px-6{
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+
+  .sm\:px-32{
+    padding-left: 8rem;
+    padding-right: 8rem;
   }
 
   .sm\:pt-12{
@@ -1404,6 +1596,10 @@ html,
 
   .sm\:font-bold{
     font-weight: 700;
+  }
+
+  .sm\:font-semibold{
+    font-weight: 600;
   }
 }
 
@@ -1435,15 +1631,36 @@ html,
   .md\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
+
+  .md\:flex-row{
+    flex-direction: row;
+  }
+
+  .md\:px-32{
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
 }
 
 @media (min-width: 1024px){
+  .lg\:top-0{
+    top: 0px;
+  }
+
+  .lg\:order-none{
+    order: 0;
+  }
+
   .lg\:mt-0{
     margin-top: 0px;
   }
 
   .lg\:mt-4{
     margin-top: 1rem;
+  }
+
+  .lg\:mb-0{
+    margin-bottom: 0px;
   }
 
   .lg\:flex{
@@ -1462,11 +1679,47 @@ html,
     width: 50%;
   }
 
+  .lg\:w-1\/3{
+    width: 33.333333%;
+  }
+
   .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:flex-row{
     flex-direction: row;
+  }
+
+  .lg\:items-end{
+    align-items: flex-end;
+  }
+
+  .lg\:items-center{
+    align-items: center;
+  }
+
+  .lg\:gap-4{
+    gap: 1rem;
+  }
+
+  .lg\:pl-4{
+    padding-left: 1rem;
+  }
+
+  .lg\:pl-8{
+    padding-left: 2rem;
+  }
+
+  .lg\:pl-12{
+    padding-left: 3rem;
+  }
+
+  .lg\:pl-0{
+    padding-left: 0px;
+  }
+
+  .lg\:align-bottom{
+    vertical-align: bottom;
   }
 }
