--- a/output.css
+++ b/output.css
@@ -561,6 +561,40 @@ html,
   --tw-contain-style:  ;
 }
 
+.container{
+  width: 100%;
+}
+
+@media (min-width: 640px){
+  .container{
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px){
+  .container{
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px){
+  .container{
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px){
+  .container{
+    max-width: 1536px;
+  }
+}
+
 .fixed{
   position: fixed;
 }
@@ -715,6 +749,14 @@ html,
 
 .-mr-3{
   margin-right: -0.75rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
+}
+
+.mt-12{
+  margin-top: 3rem;
 }
 
 .flex{
@@ -1049,6 +1091,10 @@ html,
   border-radius: 0.25rem;
 }
 
+.rounded-2xl{
+  border-radius: 1rem;
+}
+
 .border{
   border-width: 1px;
 }
@@ -1140,6 +1186,11 @@ html,
 .bg-blue-200{
   --tw-bg-opacity: 1;
   background-color: rgb(191 219 254 / var(--tw-bg-opacity));
+}
+
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b{
@@ -1280,6 +1331,14 @@ html,
   padding-left: 1.5rem;
 }
 
+.pt-6{
+  padding-top: 1.5rem;
+}
+
+.text-left{
+  text-align: left;
+}
+
 .text-center{
   text-align: center;
 }
@@ -1327,6 +1386,11 @@ html,
   line-height: 2.25rem;
 }
 
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -1341,6 +1405,10 @@ html,
 
 .font-semibold{
   font-weight: 600;
+}
+
+.italic{
+  font-style: italic;
 }
 
 .leading-snug{
@@ -1373,6 +1441,10 @@ html,
 
 .leading-relaxed{
   line-height: 1.625;
+}
+
+.leading-tight{
+  line-height: 1.25;
 }
 
 .text-black{
@@ -1430,6 +1502,11 @@ html,
   color: rgb(55 48 163 / var(--tw-text-opacity));
 }
 
+.text-gray-400{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
 .shadow-md{
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
@@ -1466,6 +1543,10 @@ html,
 .hover\:border-gray-700:hover{
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity));
+}
+
+.hover\:bg-opacity-90:hover{
+  --tw-bg-opacity: 0.9;
 }
 
 .hover\:bg-gradient-to-br:hover{
@@ -1520,6 +1601,10 @@ html,
     margin-top: 11rem;
   }
 
+  .sm\:mt-12{
+    margin-top: 3rem;
+  }
+
   .sm\:flex{
     display: flex;
   }
@@ -1534,6 +1619,10 @@ html,
 
   .sm\:w-auto{
     width: auto;
+  }
+
+  .sm\:w-1\/2{
+    width: 50%;
   }
 
   .sm\:max-w-2xl{
@@ -1580,6 +1669,10 @@ html,
     padding-top: 3rem;
   }
 
+  .sm\:pt-10{
+    padding-top: 2.5rem;
+  }
+
   .sm\:text-center{
     text-align: center;
   }
@@ -1604,6 +1697,10 @@ html,
 }
 
 @media (min-width: 768px){
+  .md\:mt-12{
+    margin-top: 3rem;
+  }
+
   .md\:grid{
     display: grid;
   }
@@ -1624,6 +1721,10 @@ html,
     width: 4rem;
   }
 
+  .md\:w-1\/2{
+    width: 50%;
+  }
+
   .md\:min-w-32{
     min-width: 8rem;
   }
@@ -1639,6 +1740,10 @@ html,
   .md\:px-32{
     padding-left: 8rem;
     padding-right: 8rem;
+  }
+
+  .md\:pt-10{
+    padding-top: 2.5rem;
   }
 }
 
@@ -1663,6 +1768,10 @@ html,
     margin-bottom: 0px;
   }
 
+  .lg\:mt-12{
+    margin-top: 3rem;
+  }
+
   .lg\:flex{
     display: flex;
   }
@@ -1681,6 +1790,10 @@ html,
 
   .lg\:w-1\/3{
     width: 33.333333%;
+  }
+
+  .lg\:flex-1{
+    flex: 1 1 0%;
   }
 
   .lg\:grid-cols-3{
@@ -1703,6 +1816,10 @@ html,
     gap: 1rem;
   }
 
+  .lg\:gap-8{
+    gap: 2rem;
+  }
+
   .lg\:pl-4{
     padding-left: 1rem;
   }
@@ -1719,7 +1836,25 @@ html,
     padding-left: 0px;
   }
 
+  .lg\:pt-10{
+    padding-top: 2.5rem;
+  }
+
   .lg\:align-bottom{
     vertical-align: bottom;
+  }
+
+  .lg\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .lg\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:font-semibold{
+    font-weight: 600;
   }
 }
